--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cambio X</title>
+    <title>NAG</title>
     <link rel="stylesheet" href="dist/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i|Open+Sans:300,400,600,700,800" rel="stylesheet">    
 </head>
@@ -760,7 +760,8 @@
                 </div>
 			</div>
 		</div>
-	</footer>
+    </footer>
+    
     <script src="dist/js/main.min.js"></script>
 </body>
 </html>
